# windows-trash-manager

./: Cargo.toml  build.rs
src/: app.rs  assets.rs  consts.rs  lib.rs  main.rs
