[package]
name = "windows_trash_manager"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Julien Wetzel <julien.wetzel@gmail.com>"]
description = "Manage Recycle Bin on Windows"
github = "https://github.com/julienwetzel/windows-trash-manager.git"
categories = ["gui, windows"]
keywords = ["gui", "ui", "windows"]
edition = "2021"
rust-version = "1.67.1"

[dependencies]
# Custom
trash = "3.0.1"
chrono = "0.4"
dark-light = "1.0"
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "dark-light",    # Detect dark mode system preference using dark-light
] }
tracing-subscriber = "0.3"

# serde only if persistence:
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]

# To use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# Tu use fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
